--- a/data-mining/static/styles.css
+++ b/data-mining/static/styles.css
@@ -58,6 +58,7 @@ a:hover{
 }
 #left h3, #right h3{
     margin-bottom: -10px;
+    text-align: center;
 }
 #left ul li, #right ul li{
     border: 1px solid #C0C0C0;
