--- a/data-mining/static/styles.css
+++ b/data-mining/static/styles.css
@@ -1,6 +1,6 @@
 body {
     margin: auto; /* center in viewport */
-    width: 1000px;
+    width: 1100px;
 }
 
 #hd{
@@ -10,7 +10,7 @@ body {
 #key-form{
     margin: auto;
     text-align: center;
-    width: 990px;
+    width: 1090px;
 }
 #sub{
     margin-left: 10px;
@@ -48,24 +48,24 @@ a:hover{
 #content{
     overflow: auto;
 }
-#left, #right{
+#left, #right, #middle{
     margin: 5px;
-    padding: 1em;
-    width: 45%;
+    padding: 0.5em;
+    width: 30%;
 }
-#left ul, #right ul{
+#left ul, #right ul, #middle ul{
     display: inline;
 }
-#left h3, #right h3{
+#left h3, #right h3, #middle h3{
     margin-bottom: -10px;
     text-align: center;
 }
-#left ul li, #right ul li{
+#left ul li, #right ul li, #middle ul li{
     border: 1px solid #C0C0C0;
     -webkit-border-radius: 8px; /* Saf3-4, iOS 1-3.2, Android =1.6 */
     -moz-border-radius: 8px; /* FF1-3.6 */
     border-radius: 8px; /* Opera 10.5, IE9, Saf5, Chrome, FF4, iOS 4, Android 2.1+ */
-    margin: 5px;
+    margin: 5px 5px 10px 5px;
     padding: 10px; 
 }
 
@@ -77,15 +77,23 @@ a:hover{
     background-color: #FFE0E0;
 }
 
+#middle ul li{
+    background-color: #FAF7F8;
+}
+
 #left {
+    float: left;
+    margin-left: 10px;
+}
+#middle {
     float: left;
 }
 #right{
-    float: right;
+    float: left;
 }
 
 #results{
-    width: 990px;
+    width: 1090px;
     margin: auto;
 }
 #result-chart{
@@ -94,6 +102,13 @@ a:hover{
     margin: auto;
 }
 #stats {
+    text-align: center;
+}
+#error {
+    color: red;
+    width: 990px;
+    padding: 20px 0;
+    margin: auto;
     text-align: center;
 }
 
